--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,11 @@
         type="text"
         [(ngModel)]="filteredStatus"
       >
+      <br>
+      <button
+        class="btn btn-primary"
+        (click)="onAddServer()"
+      >Add Server</button>
       <hr>
       <ul class="list-group">
         <li
